--- a/stocks.css
+++ b/stocks.css
@@ -1,3 +1,5 @@
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css");
+
 header {
   width: 90vw;
   color: azure;
@@ -55,4 +57,26 @@ button {
   color: azure;
   font-size: 2rem;
   padding: 1rem;
+}
+
+footer {
+  /* padding-top: 3rem; */
+  margin: 0;
+  text-align: center;
+}
+
+li {
+  display: inline;
+  list-style: none;
+  margin: 1rem;
+  font-size: 1.2rem;
+}
+
+ul {
+  padding-left: 0;
+  padding: 1rem;
+}
+
+i {
+  color: azure;
 }
