--- a/stocks.css
+++ b/stocks.css
@@ -45,7 +45,7 @@ button {
   width: 6rem;
   color: azure;
   font-size: 1.5rem;
-
+  margin: 0.5rem;
   background-color: #182848;
   border-radius: 8px;
   border: 1.5px solid black;
@@ -54,9 +54,12 @@ button {
 .output-div {
   height: 4rem;
   text-align: center;
-  color: azure;
+  color: black;
+  background-color: rgba(240, 255, 255, 0.562);
   font-size: 2rem;
   padding: 1rem;
+  margin: 0.5rem;
+  border-radius: 2px;
 }
 
 footer {
